# QuoridorCore

./: .gitignore  CMakeLists.txt  README.md
cmake/: project_warnings.cmake
consoleApp/: CMakeLists.txt
consoleApp/include/: ConsoleApp.h
consoleApp/src/: ConsoleApp.cpp
plugins/: CMakeLists.txt
plugins/Burdea_Plugin/: CMakeLists.txt
plugins/Burdea_Plugin/include/: BPlayer.h
plugins/Burdea_Plugin/src/: BPlayer.cpp  PlayerRegistration.cpp
plugins/MB6_plugin/: CMakeLists.txt
plugins/MB6_plugin/include/: MB6_board.h  MB6_logger.h  MB6_player.h  MB6_timer.h
plugins/MB6_plugin/src/: MB6_board.cpp  MB6_logger.cpp  MB6_player.cpp  MB6_timer.cpp  player_registration.cpp
plugins/MagneB6_plugin/: CMakeLists.txt
plugins/MagneB6_plugin/include/: MagneB6_player.h
plugins/MagneB6_plugin/src/: MagneB6_player.cpp  player_registration.cpp
plugins/a_plugin/: CMakeLists.txt
plugins/a_plugin/include/: APlugin.h  Board.h  Cell.h  Defines.h  TurnGenerator.h
plugins/a_plugin/src/: APlugin.cpp  Board.cpp  PlayerRegistration.cpp  TurnGenerator.cpp
plugins/bk_plugin/: CMakeLists.txt
plugins/bk_plugin/include/: BaseData.h  PluginMain.h  mcts_impl.h
plugins/bk_plugin/include/mcts/: JobScheduler.h  mcts.h  state.h
plugins/bk_plugin/src/: PlayerRegistration.cpp  PluginMain.cpp  mcts_impl.cpp
plugins/bk_plugin/src/mcts/: JobScheduler.cpp  mcts.cpp
plugins/daniel_guramulta_plugin/: CMakeLists.txt
plugins/daniel_guramulta_plugin/include/: DanielPlayer.h  gameboard.h  montecarlonode.h  quoridormove.h  quoridorstate.h
plugins/daniel_guramulta_plugin/src/: DanielPlayer.cpp  PlayerRegistration.cpp  montecarlonode.cpp  quoridormove.cpp  quoridorstate.cpp
plugins/dragoslav_plugin/: CMakeLists.txt
plugins/dragoslav_plugin/include/: board.h  debug.h  dragoslav_player.h  min_path.h  minimax.h  plugin_core_interface.h  tests.h
plugins/dragoslav_plugin/src/: board.cpp  debug.cpp  dragoslav_player.cpp  min_path.cpp  minimax.cpp  player_registration.cpp  plugin_core_interface.cpp  tests.cpp
plugins/drma_plugin/: CMakeLists.txt
plugins/drma_plugin/include/: board.h  debug.h  drma_player.h  min_path.h  minimax.h  plugin_core_interface.h  tests.h
plugins/drma_plugin/src/: board.cpp  debug.cpp  drma_player.cpp  min_path.cpp  minimax.cpp  player_registration.cpp  plugin_core_interface.cpp  tests.cpp
plugins/dummy_plugin/: CMakeLists.txt
plugins/dummy_plugin/include/: DummyPlayer.h
plugins/dummy_plugin/src/: DummyPlayer.cpp  PlayerRegistration.cpp
plugins/ic_plugin/: CMakeLists.txt
plugins/ic_plugin/include/: ICPlayer.h
plugins/ic_plugin/src/: ICPlayer.cpp  PlayerRegistration.cpp
plugins/marinica_plugin/: CMakeLists.txt
plugins/marinica_plugin/include/: board.h  debug.h  marinica_player.h  min_path.h  minimax.h  plugin_core_interface.h  tests.h
plugins/marinica_plugin/src/: board.cpp  debug.cpp  marinica_player.cpp  min_path.cpp  minimax.cpp  player_registration.cpp  tests.cpp
plugins/maz_plugin/: CMakeLists.txt
plugins/maz_plugin/include/: ABBoard.h  ABotV2Analyser.h  BaseData.h  MoveInserter.h  PluginMain.h  SolutionNode.h
plugins/maz_plugin/src/: ABBoard.cpp  ABotV2Analyser.cpp  MoveInserter.cpp  PlayerRegistration.cpp  PluginMain.cpp  SolutionNode.cpp
qcli/: CMakeLists.txt
qcli/include/: ConsoleApp.h  ConsolePlayer.h
qcli/src/: ConsoleApp.cpp  ConsolePlayer.cpp  main.cpp
qcore/: CMakeLists.txt
qcore/include/: BoardState.h  Game.h  GameController.h  GameServer.h  Player.h  PlayerAction.h  PluginManager.h  QcoreUtil.h  Qcore_API.h  RemoteGame.h  RemotePlayer.h
qcore/src/: BoardState.cpp  Game.cpp  GameController.cpp  GameServer.cpp  Player.cpp  PlayerAction.cpp  PluginManager.cpp  QcoreUtil.cpp  RemoteGame.cpp  RemotePlayer.cpp
qsfml/: CMakeLists.txt
qsfml/include/: AnimationIncremental.h  Board.h  BoardMapShow.h  FontLoader.h  ImGUIBoardWidget.h  ImGUIConsoleWidget.h  ImGuiTimelineWidget.h  ManualPlayer.h  Resource.h  TextFactory.h  TileMap.h  TimelineRepo.h
qsfml/other/GIMP/: tileset.xcf
qsfml/other/Tiled/: quoridor_map.csv  quoridor_map.tmx  tileset.tsx
qsfml/src/: Board.cpp  FontLoader.cpp  ImGUIBoardWidget.cpp  ImGUIConsoleWidget.cpp  ImGuiTimelineWidget.cpp  ManualPlayer.cpp  TextFactory.cpp  TileMap.cpp  main.cpp
